d-ocean-kubernets/app1/01-b-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
        labels:
          app: app
    spec:
      containers:
        - name: phpmyadmin-app-container
          image: phpmyadmin/phpmyadmin
          imagePullPolicy: Always
          resources:
            requests: 
              memory: "256Mi"
              cpu: "800m"
            limits:
              memory: "512Mi"
              cpu: "1000m"
          ports:
            - containerPort: 80
              protocol: TCP
