d-ocean-kubernets/app1/02-a-mysqlb-stayfullset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-statefulset-dbmysql
  namespace: app
spec:
  replicas: 1
  serviceName: mysql-app-svc-dbmysql
  selector:
    matchLabels:
      app: mysql-app-selector
  template:
    metadata:
      labels:
        app: mysql-app-selector
    spec:
      containers:
      - name: mysql-container-name
        image: mysql
        imagePullPolicy: Always       
        ports:
        - containerPort: 3306
