d-ocean-kubernets/app1/01-a-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: app
spec:
  ports:
      - name: 8080-tcp
        port: 8080
        protocol: TCP
        targetPort: 80
  selector:
    app: app
  type: ClusterIP
